--- a/src/.vscode/tasks.json
+++ b/src/.vscode/tasks.json
@@ -7,9 +7,9 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "./main.cpp",
-                "./modules/input/AsyncInput.cpp",
-                "./modules/input/Input.cpp",
+                "${fileDirname}\\modules\\input\\AsyncInput.cpp",
+                "${fileDirname}\\modules\\input\\Input.cpp",
+                "${file}",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
